<resources>
    <string name="app_name">2048</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="new_game">New game</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="share">Share</string>
    <string name="score">Score: %1$d</string>
    <string name="winningMessage">2048 (you won!)</string>
    <string name="losingMessage">No more moves possible! Undo a few moves and try again... or start a new game.</string>
</resources>