<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/New"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            style="?android:attr/buttonBarStyle"
        />
        <Button
            android:id="@+id/Load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            style="?android:attr/buttonBarStyle"
        />
        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:attr/buttonBarStyle"
        />
        <Button
            android:id="@+id/Undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            style="?android:attr/buttonBarStyle"
        />
        <Button
            android:id="@+id/Redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo"
            style="?android:attr/buttonBarStyle"
        />
        <Button
            android:id="@+id/Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="?android:attr/buttonBarStyle"
        />
    </LinearLayout>

    <!-- Top row: just the "Up" button. -->
    <Button
        android:id="@+id/upButton"
        android:text="@string/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <!-- Middle row: the "left" button, the GameBoardView, and the "right" button. -->
    <!-- I tried to center the GameBoardView by making its start- and end-constraint both "parent".
         But in another episode of "ConstraintLayout making things unnecessarily complicated",
         that made the x=0 line in the Custom view, equal to the left hand side of the SCREEN.
         So, I need to find another way of centering the Custom view.
         UPDATE: seems that giving the first element have start constraint at parent,
         and giving the last element an end constraint at parent, we can get that centering.
         It makes sense, but could have been documented lots better, Google...
         Still need to figure out, how to just have them evenly spaced...
    -->

    <Button
        android:id="@+id/leftButton"
        android:text="@string/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upButton"
        app:layout_constraintStart_toStartOf="parent"
    />

    <!-- TODO?~ See if we can use relative layout_width and layout_height, instead of absolute values.
      So far, that has lead to the layout being as large as the screen, whether we used match_parent or wrap_content.
      There should be a way to tell Android what the content size is. (And scale it to screen size, while we're at it).
      Check `onMeasure`.
      -->
    <com.cormontia.android.game2048.GameBoardView
        android:id="@+id/gameBoardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/upButton"
        app:layout_constraintStart_toEndOf="@id/leftButton"
        app:layout_constraintEnd_toStartOf="@id/rightButton"
    />

    <Button
        android:id="@+id/rightButton"
        android:text="@string/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upButton"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <!-- Bottom row: just the "Down" button. -->
    <Button
        android:id="@+id/downButton"
        android:text="@string/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gameBoardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>